<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">  
    <modelVersion>4.0.0</modelVersion>  
    <groupId>com.unicenta</groupId>  
    <artifactId>unicentaopos</artifactId>  
    <version>4.5</version>  
    <packaging>jar</packaging>
    <name>krPOS :: Unicenta.oPOS</name>  
    <properties> 
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>14</maven.compiler.source>
        <maven.compiler.target>14</maven.compiler.target>
        <kotlin.version>1.3.50</kotlin.version>
    </properties>  
    <dependencies>
        <dependency> 
            <groupId>org.jfree</groupId>  
            <artifactId>jcommon</artifactId>  
            <version>1.0.24</version> 
        </dependency>  
        <dependency> 
            <groupId>org.jfree</groupId>  
            <artifactId>jfreechart</artifactId>  
            <version>1.5.0</version> 
        </dependency> 
        <!-- iText Java-PDF library-->
        <dependency> 
            <groupId>com.itextpdf</groupId>  
            <artifactId>itextpdf</artifactId>  
            <version>5.5.6</version> 
        </dependency>  
        <!-- Apache POI - Java API To Access Microsoft Format Files -->
        <dependency> 
            <groupId>org.apache.poi</groupId>  
            <artifactId>poi</artifactId>  
            <version>4.1.2</version> 
        </dependency>  
        <dependency> 
            <groupId>net.sf.barcode4j</groupId>  
            <artifactId>barcode4j</artifactId>  
            <version>2.1</version> 
        </dependency>  
        <dependency> 
            <groupId>commons-beanutils</groupId>  
            <artifactId>commons-beanutils</artifactId>  
            <version>1.9.4</version> 
        </dependency>  
        <dependency> 
            <groupId>commons-digester</groupId>  
            <artifactId>commons-digester</artifactId>  
            <version>2.1</version> 
        </dependency> 
        <dependency> 
            <groupId>commons-codec</groupId>  
            <artifactId>commons-codec</artifactId>  
            <version>1.10</version> 
        </dependency>
        <dependency> 
            <groupId>commons-discovery</groupId>  
            <artifactId>commons-discovery</artifactId>  
            <version>0.5</version> 
        </dependency>  
        <dependency> 
            <groupId>commons-logging</groupId>  
            <artifactId>commons-logging</artifactId>  
            <version>1.2</version> 
        </dependency>  
        <dependency> 
            <groupId>commons-collections</groupId>  
            <artifactId>commons-collections</artifactId>  
            <version>3.2.2</version> 
        </dependency>  
        <dependency> 
            <groupId>commons-lang</groupId>  
            <artifactId>commons-lang</artifactId>  
            <version>2.6</version> 
        </dependency>     
        <dependency> 
            <groupId>org.apache.velocity</groupId>  
            <artifactId>velocity</artifactId>  
            <version>1.7</version> 
        </dependency>  
        <!--Apache ORO: text-processing,substitutions, splits, filtering filenames, etc. -->
        <dependency> 
            <groupId>oro</groupId>  
            <artifactId>oro</artifactId>  
            <version>2.0.8</version> 
        </dependency>
        <dependency> 
            <groupId>org.beanshell</groupId>  
            <artifactId>bsh</artifactId>  
            <version>2.0b5</version> 
        </dependency>  
        <dependency> 
            <groupId>org.bidib.jbidib.org.qbang.rxtx</groupId>  
            <artifactId>rxtxcomm</artifactId>  
            <version>2.2</version> 
        </dependency>
        <dependency> 
            <groupId>org.swinglabs.swingx</groupId>  
            <artifactId>swingx-all</artifactId>  
            <version>1.6.5-1</version> 
        </dependency> 
        <dependency> 
            <groupId>org.swinglabs</groupId>  
            <artifactId>swing-layout</artifactId>  
            <version>1.0.3</version> 
        </dependency>  
        <dependency> 
            <groupId>net.sourceforge.javacsv</groupId>  
            <artifactId>javacsv</artifactId>  
            <version>2.0</version> 
        </dependency>  
        <dependency> 
            <groupId>org.netbeans.external</groupId>  
            <artifactId>AbsoluteLayout</artifactId>  
            <version>RELEASE121</version> 
        </dependency> 
           
        <dependency> 
            <groupId>org.javapos</groupId>  
            <artifactId>javapos</artifactId>  
            <version>1.14.2</version>
            <exclusions>
                <exclusion>
                    <groupId>com.sleepycat</groupId>
                    <artifactId>je</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.javapos</groupId>
            <artifactId>javapos-contracts</artifactId>
            <version>1.14.3</version>
        </dependency>   
        <!-- ISO 8583-1:2003 Financial transaction card originated messages-->
        <dependency>
            <groupId>org.jpos</groupId>
            <artifactId>jpos</artifactId>
            <version>2.1.4</version>
        </dependency>
        <dependency> 
            <groupId>mysql</groupId>  
            <artifactId>mysql-connector-java</artifactId>  
            <version>8.0.21</version> 
            <scope>runtime</scope>
        </dependency>  
        <dependency> 
            <groupId>org.apache.derby</groupId>  
            <artifactId>derby</artifactId>  
            <version>10.15.2.0</version> 
            <scope>runtime</scope>
        </dependency>  
        <!-- DOM, SAX, and JAXP, 
        <dependency> 
            <groupId>xml-apis</groupId>  
            <artifactId>xml-apis</artifactId>  
            <version>1.0.b2</version> 
        </dependency>  
        -->
        
        <!-- Apache apache xmlgraphics fop   --> 
        <dependency> 
            <groupId>org.apache.xmlgraphics</groupId>  
            <artifactId>fop</artifactId>  
            <version>2.5</version> 
        </dependency>  
        <dependency> 
            <groupId>net.sf.jasperreports</groupId>  
            <artifactId>jasperreports</artifactId>  
            <version>6.15.0</version> 
        </dependency>  
        <dependency> 
            <groupId>net.sf.jasperreports</groupId>  
            <artifactId>jasperreports-fonts</artifactId>  
            <version>6.15.0</version> 
        </dependency>  
        <!-- Eclipse Compiler -->
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>ecj</artifactId>
            <version>3.23.0</version>
        </dependency> 
        <dependency>
            <groupId>org.eclipse.jdt</groupId>
            <artifactId>org.eclipse.jdt.core</artifactId>
            <version>3.23.0</version>
        </dependency> 
        
        <!-- Commercial version -->  
        <dependency> 
            <groupId>joda-time</groupId>  
            <artifactId>joda-time</artifactId>  
            <version>2.9.7</version> 
        </dependency>  
        <!--  -->
        <dependency>
            <groupId>de.sciss</groupId>  
            <artifactId>weblaf-complete</artifactId>  
            <version>1.29</version> 
        </dependency>
          
        <dependency>
            <groupId>javax.persistence</groupId>
            <artifactId>javax.persistence-api</artifactId>
            <version>2.2</version>
        </dependency>
        <dependency>
            <groupId>com.dalsemi.onewire</groupId>  
            <artifactId>onewire-api</artifactId>  
            <version>0.1</version> 
        </dependency> 
        <!-- 4.2.2 -->  
        <dependency> 
            <groupId>org.usb4java</groupId>  
            <artifactId>usb4java</artifactId>  
            <version>1.2.0</version> 
        </dependency>  
        <dependency> 
            <groupId>javax.usb</groupId>  
            <artifactId>usb-api</artifactId>  
            <version>1.0.2</version> 
        </dependency>  
        <dependency> 
            <groupId>org.jdatepicker</groupId>  
            <artifactId>jdatepicker</artifactId>  
            <version>1.3.4</version> 
        </dependency>  
     
        <!-- Kotlin -->  
        <dependency> 
            <groupId>org.jetbrains.kotlin</groupId>  
            <artifactId>kotlin-stdlib</artifactId>  
            <version>${kotlin.version}</version> 
        </dependency>
        <!-- Substance - Swing LookAndFeel (LaF)
           <dependency>
                <groupId>org.pushing-pixels</groupId>
                <artifactId>radiance-substance</artifactId>
                <version>3.5.1</version>
            </dependency>
        -->
        
        <!-- flatlaf - Swing LaF -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>0.27</version>
        </dependency>
        <!-- Flat Look and Feel addon for SwingX -->
        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-swingx</artifactId>
            <version>0.43</version>
        </dependency>
    
    </dependencies>  
    <build> 
        <plugins> 
            <!-- Kotlin PB_NOTE - NOT Compile 
             <plugin> 
               <artifactId>kotlin-maven-plugin</artifactId>  
               <groupId>org.jetbrains.kotlin</groupId>  
               <version>${kotlin.version}</version>  
               <executions> 
                 <execution> 
                   <id>compile</id>  
                   <phase>process-sources</phase>  
                   <goals> 
                     <goal>compile</goal> 
                   </goals> 
                 </execution>  
                 <execution> 
                   <id>test-compile</id>  
                   <phase>process-test-sources</phase>  
                   <goals> 
                     <goal>test-compile</goal> 
                   </goals> 
                 </execution> 
               </executions> 
             </plugin>  
            --> 
            <plugin> 
                <groupId>org.apache.maven.plugins</groupId>  
                <artifactId>maven-compiler-plugin</artifactId>  
                <version>3.8.1</version>
                <configuration>
                    <showWarnings>true</showWarnings>
                    <showDeprecation>true</showDeprecation>
                    <debug>true</debug> 
                </configuration> 
            </plugin>
        </plugins>  
        <finalName>unicentaopos</finalName> 
    </build>  
    
</project>
